<resources>
    <string name="app_name">ОГЭ Английский</string>
    <string name="hello">Здравствуйте!</string>
    <string name="enter_name">Введите Ваше имя:</string>
    <string name="name_surname">Имя и фамилия</string>
    <string name="enter_grade">Введите желаемую оценку:</string>
    <string name="grade">Оценка</string>
    <string name="start_preparation">Начать готовиться</string>
    <string name="start_comment">Введите данные, чтобы продолжить</string>
    <string name="oge_main_screen">ОГЭ</string>
    <string name="english">English</string>
    <string name="trainings">Тренировки</string>
    <string name="variants">Варианты</string>
    <string name="theory">Теория</string>
    <string name="individual">Индивидуальная</string>
    <string name="audio">Аудирование</string>
    <string name="reading">Чтение</string>
    <string name="use_of_english">Языковой материал</string>
    <string name="writing">Письмо</string>
    <string name="progress">прогресс 42%</string>
    <string name="exam_info">Общая информация об экзамене</string>
    <string name="cards_watched">просмотрено 24/42</string>
    <string name="variant">Вариант 1</string>
    <string name="solved">решено</string>
    <string name="not_solved">не решено</string>
    <string name="check_variant">Проверить вариант</string>
    <string name="exit">Выход</string>
    <string name="submit">Проверка</string>
    <string name="mistakes">Смотреть ошибки</string>
    <string name="uoe_topic1">Множественное число существительных</string>
    <string name="uoe_topic2">Порядковые числительные</string>
    <string name="uoe_topic3">Объектные местоимения</string>
    <string name="app_version">Версия приложения: 1.5</string>
    <string name="email_us">Хотите сообщить об ошибке или внести предложение? Напишите нам!</string>
    <string name="icons_designed_by">Icons designed by Smashicons, Freepik, Gregor Cresnar from www.flaticon.com</string>
    <string name="MA_gratitude">Благодарность Марии Туруновой за наполнение контентом</string>
    <string name="right_answer_header">Правильный ответ:</string>
    <string name="uoe_hint">Слова вводите заглавными буквами, без пробелов, как в экзаменационном бланке. Глагольные формы вводите без сокращений.</string>
    <string name="uoe_topic1_task1">He was in the bathroom cleaning his ________ when he heard some unfamiliar voices from the veranda.</string>
    <string name="uoe_topic1_origin1">TOOTH</string>
    <string name="uoe_topic1_answer1">TEETH</string>
    <string name="uoe_topic1_task2">His ________ were wet and I gave him a pair of socks to change into. A cup of hot tea and some biscuits soon made the boy feel warm.</string>
    <string name="uoe_topic1_origin2">FOOT</string>
    <string name="uoe_topic1_answer2">FEET</string>
    <string name="uoe_topic1_task3">We arrived at the lake very early. It was cold but in spite of that there were several ________ there. Dad pulled our fishing rods out of the rucksack and we joined the others.</string>
    <string name="uoe_topic1_origin3">MAN</string>
    <string name="uoe_topic1_answer3">MEN</string>
    <string name="uoe_topic1_task4">That was probably true - most ________ in Michael’s class were very competent computer users.</string>
    <string name="uoe_topic1_origin4">CHILD</string>
    <string name="uoe_topic1_answer4">CHILDREN</string>
    <string name="uoe_topic1_task5">I felt puzzled and didn’t know what to say. The two ________ at the bus stop looked amused at our conversation and didn’t hide their smiles.</string>
    <string name="uoe_topic1_origin5">WOMAN</string>
    <string name="uoe_topic1_answer5">WOMEN</string>
    <string name="uoe_topic1_task6">She actually looked younger than other ________ of her age and that was probably because of her walking.</string>
    <string name="uoe_topic1_origin6">WOMAN</string>
    <string name="uoe_topic1_answer6">WOMEN</string>
    <string name="uoe_topic1_task7">Anna was glad that the academic year was about to finish. Like most ________ she was looking forward to the summer but not because she wanted to relax.</string>
    <string name="uoe_topic1_origin7">CHILD</string>
    <string name="uoe_topic1_answer7">CHILDREN</string>
    <string name="uoe_topic1_task8">One of the __________ called for the manager and complained.” Ted nervously turned back to his computer. “I didn’t like that job anyway.”</string>
    <string name="uoe_topic1_origin8">WOMAN</string>
    <string name="uoe_topic1_answer8">WOMEN</string>
    <string name="uoe_topic1_task9">My first impulse was to say “no” - unlike most ________ I hated shopping. But Kate sounded so unhappy that I felt sorry for her.</string>
    <string name="uoe_topic1_origin9">WOMAN</string>
    <string name="uoe_topic1_answer9">WOMEN</string>
    <string name="uoe_topic1_task10">Mr. and Mrs. Wormwood were our neighbours. They had two ________.</string>
    <string name="uoe_topic1_origin10">CHILD</string>
    <string name="uoe_topic1_answer10">CHILDREN</string>
    <string name="audio_topic1">Задание 1</string>
    <string name="audio_topic2">Задание 2</string>
    <string name="audio_topic3">Задания 3&#8211;8</string>
    <string name="reading_topic1">Задание 9</string>
    <string name="reading_topic2">Задания 10&#8211;17</string>
    <string name="audio_topic1_task1">1. In a swimming pool\n2. In a street\n3. In a travel agency\n4. In a hotel\n5. On a bus excursion</string>
    <string name="audio_topic2_task1">1. The speaker talks about an animal care organization.\n2. The speaker believes environmental education is very important.\n3. The speaker is against keeping exotic animals as pets.\n4. The speaker explains how to protect exotic animals.\n5. The speaker says that common animals are disappearing.\n6. The speaker talks about health reasons for keeping pets</string>
    <string name="audio_topic3_task1">On his first day Max came to school</string>
    <string name="audio_topic3_task1_option1">too early.</string>
    <string name="audio_topic3_task1_option2">too late.</string>
    <string name="audio_topic3_task1_option3">exactly on time.</string>
    <string name="audio_topics_3_8_task1">On his first day Max came to school/option/too early./option/too late./option/exactly on time.\n
Max\'s school is located/option/in the park./option/near the library./option/in the city centre.\n
In class Max\'s classmates speak/option/only English./option/their native language./option/Max\'s native language.\n
Max\'s school/option/has computers in every classroom./option/has a special computer room./option/is a computer-free zone.\n
Max is disappointed with school/option/cafeteria food./option/library facilities./option/sports facilities.\n
In the evening Max is going to/option/go to a party./option/do his homework/option/walk around the city.</string>
    <string name="reading_topic2_text1">\u00A0\u00A0\u00A0\u00A0The small town in Bavaria is very famous in Germany, because there is the home of the Dassler brothers. They started two well-known sports brands: Adidas and Puma. But their story is not about peace, it\'s about war, disagreement and competition.\n
\u00A0\u00A0\u00A0In 1924 Adolf and Rudolf started making shoes and soon had a small shoe business. The elder brother, Rudolf (or Rudi), was a veteran of World War I. He was a good businessman and knew how to sell things. The younger brother, Adolf (or Adi) was more thoughtful and creative. The brothers had 25 workers at the factory and they made 100 pairs of sports shoes every day.\n
\u00A0\u00A0\u00A0During the 1936 Olympics, Adi Dassler drove to the Olympic village with a suitcase full of sports shoes. He asked an American sprinter Jesse Owens to wear and run in them. Owens won 4 gold medals and at once the Dassler shoes became popular. The Dasslers were selling 200,000 pairs of shoes each year before World War II.\n
\u00A0\u00A0\u00A0We don\'t know much about their lives at the time of World War II. However, in the 1940s they refused to work together any more. Rudolf left the company, moved to the other bank of the river and started a competing shop there. At first he wanted to name his company Ruda, but then he thought about a graceful, quick animal – the puma. And so Puma was born.\n
\u00A0\u00A0\u00A0Adi stayed with family business and renamed the company Adidas. He developed the 3-stripe logo in 1941 and registered it as Adidas\' brand. Adi wanted to make a symbol that could be easily recognized by other people and three stripes was a good idea. The stripes show a mountain. You have to climb it if you want to reach the peak or achieve anything.\n
\u00A0\u00A0\u00A0The serious conflict between the brothers divided the town into two: the Adidas bank and the Puma bank of the river. It was like a silent war. Only the bravest people could wear their Puma shoes and cross the river to the Adidas side of the town. When people met in the street, they first looked down at each other\'s shoes. It helped them to decide if that person was an enemy or a friend. What\'s more, Puma people didn\'t marry Adidas people. There were Adidas and Puma schools, pubs, shops, restaurants and hotels.\n
\u00A0\u00A0\u00A0The brothers never became friendly again or even spoke to each other. Rudi died in 1974 and left Puma to his son. The family sold the company in 1989. Adi died in 1978, his son was the head of Adidas till his death in 1987. Today Puma is controlled by a big French company and Adidas is owned by a number of companies.\n
\u00A0\u00A0\u00A0The "war" was declared completely over in 2009. Employees and workers of both companies shook hands and then played a football match in the Bavarian town of Herzogenaurach. The match was the first joint event for the two companies since 1948. The match ended 7–5 but the teams were not divided into Adidas and Puma. Each team was a mix of Adidas and Puma players.</string>
    <string name="to_be_heading"><b>Be</b> / быть</string>
    <string name="to_be_1"><u>I/he/she/it</u>    <b>was</b></string>
    <string name="to_be_2"><u>you/we/they</u>    <b>were</b></string>
    <string name="to_be_3"><u>I</u>    <b>am</b></string>
    <string name="to_be_4"><u>he/she/it</u>    <b>is</b></string>
    <string name="to_be_5"><u>you/we/they</u>    <b>are</b></string>
    <string name="to_be_6"><u>I/you/he/she/it/we/they</u>    <b>will be</b></string>
    <string name="reported_present_simple">Present Simple\n<b>(V/Vs)</b></string>
    <string name="reported_future_simple">Future Simple\n<b>(will V)*</b></string>
    <string name="reported_past_simple">Past Simple\n<b>(V2/Ved)</b></string>
    <string name="reported_present_cont">Present Continuous\n<b>(am/is/are Ving)</b></string>
    <string name="reported_past_cont">Past Continuous\n<b>(was/were Ving)</b></string>
    <string name="reported_present_perf">Present Perfect\n<b>(have/has V3)</b></string>
    <string name="future_in_past">Future in the past\n<b>(would V)*</b></string>
    <string name="reported_past_perf">Past Perfect\n<b>(had V3)</b></string>
    <string name="reported_past_perf_cont">Past Perfect Continuous\n<b>(had been Ving)</b></string>
    <string name="reported_example_1">He said, \'I <b>like</b> meat.\' → He said that he <b>liked</b> meat.</string>
    <string name="reported_example_2">She exclaimed, \'I <b>will cope</b> with it!\' → She exclaimed she <b>would cope</b> with that.*</string>
    <string name="reported_example_3">We answered, \'We <b>were</b> there yesterday.\' → We answered we <b>had been</b> there the day before.</string>
    <string name="reported_example_4">They wondered, \'<b>Are</b> you <b>working</b>?\' → They wondered if we <b>were working</b>.</string>
    <string name="reported_example_5">She said, \'I <b>was working</b> at 7pm yesterday.\' → She said she <b>had been working</b> at 7pm the day before.</string>
    <string name="reported_example_6">He said, \'I <b>have lost</b> my credit card.\' → He said he <b>had lost</b> his credit card.</string>
</resources>