<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2"
    android:gravity="center">

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Прямая речь"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Косвенная речь"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Пример предложения"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_present_simple"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_past_simple"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_example_1"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_future_simple"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/future_in_past"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_example_2"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_past_simple"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_past_perf"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_example_3"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_present_cont"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_past_cont"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_example_4"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_past_cont"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_past_perf_cont"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_example_5"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_present_perf"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_past_perf"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reported_example_6"
            android:layout_weight="2"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>
    </TableRow>
</TableLayout>
