<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="#28ACE4">

    <View
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/main_screen_separator"/>

    <TextView
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:gravity="center_horizontal"
        android:text="@string/oge_main_screen"
        android:textAppearance="@style/logotype" />


    <TextView
        android:id="@+id/english"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:text="@string/english"
        android:textSize="19sp"
        android:textColor="@color/colorPrimaryText"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="187dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:background="@color/colorSecondary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/trainings"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="187dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:background="@color/colorSecondary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/variants"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="187dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="285dp"
        android:background="@color/colorSecondary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/theory"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"/>

    </RelativeLayout>

</RelativeLayout>