<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2"
    android:gravity="center">

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/to_be_heading"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Past Simple / Прошедшее Простое"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Present Simple / Настоящее Простое"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Future Simple / Будущее Простое"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_1"
                android:background="#FFFFFF"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_2"
                android:background="#FFFFFF"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_3"
                android:background="#FFFFFF"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_4"
                android:background="#FFFFFF"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_5"
                android:background="#FFFFFF"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/to_be_6"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"/>

    </TableRow>
</TableLayout>
